[gd_scene load_steps=35 format=3 uid="uid://dsilfbvb5t08r"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_3yj7q"]
[ext_resource type="Texture2D" uid="uid://1jijl5y5y1rn" path="res://assets/pics/spritesheets/clown_kick.png" id="2_av50b"]
[ext_resource type="Texture2D" uid="uid://d3hyan3c7mhdt" path="res://assets/pics/spritesheets/clown_laugh.png" id="3_p4gks"]
[ext_resource type="Texture2D" uid="uid://8usa6jwskw7k" path="res://assets/pics/spritesheets/clown_walk.png" id="4_n1act"]
[ext_resource type="AudioStream" uid="uid://cttnuusu1sw2i" path="res://assets/sounds/clown_laugh_hohoho.wav" id="5_0r8cb"]
[ext_resource type="Texture2D" uid="uid://bwwtufo5yhwys" path="res://assets/pics/spritesheets/flower.png" id="6_bj1kw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0086a"]
size = Vector2(27, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8mxd"]
atlas = ExtResource("2_av50b")
region = Rect2(0, 0, 531, 536)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia2kn"]
atlas = ExtResource("2_av50b")
region = Rect2(0, 0, 531, 536)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iulp"]
atlas = ExtResource("2_av50b")
region = Rect2(531, 0, 531, 536)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqilh"]
atlas = ExtResource("3_p4gks")
region = Rect2(0, 0, 531, 557)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiinw"]
atlas = ExtResource("3_p4gks")
region = Rect2(531, 0, 531, 557)

[sub_resource type="AtlasTexture" id="AtlasTexture_xirx7"]
atlas = ExtResource("3_p4gks")
region = Rect2(1062, 0, 531, 557)

[sub_resource type="AtlasTexture" id="AtlasTexture_11lyr"]
atlas = ExtResource("3_p4gks")
region = Rect2(1593, 0, 531, 557)

[sub_resource type="AtlasTexture" id="AtlasTexture_w82dx"]
atlas = ExtResource("3_p4gks")
region = Rect2(2124, 0, 531, 557)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypj58"]
atlas = ExtResource("3_p4gks")
region = Rect2(2655, 0, 531, 557)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4jbf"]
atlas = ExtResource("4_n1act")
region = Rect2(0, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wijw"]
atlas = ExtResource("4_n1act")
region = Rect2(531, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6f71"]
atlas = ExtResource("4_n1act")
region = Rect2(1062, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2jm"]
atlas = ExtResource("4_n1act")
region = Rect2(1593, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_filit"]
atlas = ExtResource("4_n1act")
region = Rect2(2124, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyn8h"]
atlas = ExtResource("4_n1act")
region = Rect2(2655, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sr0v"]
atlas = ExtResource("4_n1act")
region = Rect2(3186, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtinf"]
atlas = ExtResource("4_n1act")
region = Rect2(3717, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2p6s"]
atlas = ExtResource("4_n1act")
region = Rect2(4248, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_drndl"]
atlas = ExtResource("4_n1act")
region = Rect2(4779, 0, 531, 577)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qob5"]
atlas = ExtResource("4_n1act")
region = Rect2(5310, 0, 531, 577)

[sub_resource type="SpriteFrames" id="SpriteFrames_gf3j2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8mxd")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia2kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iulp")
}],
"loop": false,
"name": &"kick",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqilh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiinw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xirx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11lyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w82dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypj58")
}],
"loop": true,
"name": &"laugh",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4jbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wijw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6f71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_filit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyn8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sr0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtinf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2p6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drndl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qob5")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_s4uwx"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("animation:animation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("animation:frame")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("animation:flip_h")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:scale")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u4cv8"]
radius = 13.1255
height = 85.7538

[sub_resource type="AtlasTexture" id="AtlasTexture_rk8q8"]
atlas = ExtResource("6_bj1kw")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2mk3"]
atlas = ExtResource("6_bj1kw")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u5oh"]
atlas = ExtResource("6_bj1kw")
region = Rect2(0, 2048, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_tflhs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk8q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2mk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u5oh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3yj7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5.5)
shape = SubResource("RectangleShape2D_0086a")

[node name="animation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_gf3j2")
animation = &"idle"
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_s4uwx")

[node name="feet_area" type="Area2D" parent="." groups=["player"]]
position = Vector2(11, -1)

[node name="feet" type="CollisionShape2D" parent="feet_area"]
position = Vector2(-14, 34)
rotation = 1.53764
shape = SubResource("CapsuleShape2D_u4cv8")

[node name="hohoho" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0r8cb")

[node name="watergun" type="AnimatedSprite2D" parent="."]
position = Vector2(-6, -3)
scale = Vector2(0.0234375, 0.0273438)
sprite_frames = SubResource("SpriteFrames_tflhs")
frame_progress = 0.626365

[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
[connection signal="animation_looped" from="animation" to="." method="_on_animation_animation_looped"]
[connection signal="body_entered" from="feet_area" to="." method="_on_feet_area_body_entered"]
[connection signal="child_entered_tree" from="feet_area/feet" to="." method="_on_feet_child_entered_tree"]
[connection signal="animation_finished" from="watergun" to="." method="_on_watergun_animation_finished"]
